--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -6,7 +6,7 @@ platforms:
     driver_config:
       image: corux/centos7-salt
   - name: debian-8
-  - name: fedora-latest
+  - name: fedora
 
 provisioner:
   name: salt_solo
