fix build by installing missing packages in docker container

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -5,7 +5,12 @@ platforms:
   - name: centos-7
     driver_config:
       image: corux/centos7-salt
+      provision_command:
+        - yum install make gcc -y
   - name: debian-8
+    driver_config:
+      provision_command:
+        - apt-get install make gcc -y
 
 provisioner:
   name: salt_solo
